integrate webpack-dev-server

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <script src="https://fb.me/react-0.13.3.js"></script>
 <script src="./node_modules/react-router/umd/ReactRouter.js"></script>
 <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
-<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+<!-- <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> -->
 <script src="./node_modules/reflux/dist/reflux.js"></script>
-<script src="/jsx/index.jsx" type="text/jsx"></script/>
+<script src="/js/jsx/index.jsx"></script/>
 
 </script>
 </html>
