--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
 <!-- <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> -->
 <script src="./node_modules/reflux/dist/reflux.js"></script>
-<script src="/js/jsx/index.jsx"></script/>
+<script src="./js/jsx/index.jsx"></script/>
 
 </script>
 </html>
