Move to solely webpack based build.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <div id="root"></div>
 </body>
 <!-- The core React library -->
-<script src="./node_modules/react/dist/react.js"></script>
-<script src="./node_modules/react-router/umd/ReactRouter.js"></script>
-<!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
 <!-- <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> -->
-<script src="./node_modules/reflux/dist/reflux.js"></script>
+<!-- <script src="./node_modules/react/dist/react.js"></script> -->
+<!-- <script src="./node_modules/react-router/umd/ReactRouter.js"></script> -->
+<!-- <script src="./node_modules/reflux/dist/reflux.js"></script> -->
+<!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
 <script src="./js/jsx/index.jsx"></script/>
 
 </script>
