Include normalize.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>react.inc</title>
+  <link href="./node_modules/normalize.css/normalize.css" rel="stylesheet"/>
 </head>
 <body>
   <div id="bobCounter"></div>
