Switch to Alt and Materialize-UI

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<!doctype html>
 <html>
 <head>
   <title>react.inc</title>
-  <link href="./node_modules/normalize.css/normalize.css" rel="stylesheet"/>
+  <link href="/node_modules/normalize.css/normalize.css" rel="stylesheet"/>
+  <link href='//fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+  <style type="text/css">font-family: 'Roboto', sans-serif;</style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8" />
 </head>
 <body>
   <div id="bobCounter"></div>
@@ -14,7 +20,5 @@
 <!-- <script src="./node_modules/react-router/umd/ReactRouter.js"></script> -->
 <!-- <script src="./node_modules/reflux/dist/reflux.js"></script> -->
 <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
-<script src="./js/jsx/index.jsx"></script/>
-
-</script>
+<script src="/js/jsx/index.js"></script/>
 </html>
