--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
 <!-- <script src="./node_modules/react-router/umd/ReactRouter.js"></script> -->
 <!-- <script src="./node_modules/reflux/dist/reflux.js"></script> -->
 <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
-<script src="/js/jsx/index.js"></script/>
+<script src="/js/jsx/index.js"></script>
 </html>
